fieldx/tests/uncompilable/stable+serde,async-tokio,clonable-lock/unused_reader.stderr
error: feature 'sync' is required
 --> tests/uncompilable/unused_reader.rs
  |
  | #[fxstruct(sync)]
  |            ^^^^
